created new pickle file in zero position shoulder, and only force to end effector

--- a/data/envs/add_g1_env.yaml
+++ b/data/envs/add_g1_env.yaml
@@ -27,7 +27,7 @@ env:
     contact_bodies: ["left_knee_link", "left_ankle_pitch_link", "left_ankle_roll_link", "right_knee_link", "right_ankle_pitch_link", "right_ankle_roll_link"]
     #contact_bodies: ["left_knee_link", "left_ankle_pitch_link", "left_ankle_roll_link", "right_knee_link", "right_ankle_pitch_link", "right_ankle_roll_link", "left_elbow_link", "left_wrist_roll_link", "left_wrist_pitch_link", "left_wrist_yaw_link", "right_elbow_link", "right_wrist_roll_link", "right_wrist_pitch_link", "right_wrist_yaw_link"] # cartwheel
     
-    motion_file: "data/motions/g1/g1_walk.pkl"
+    motion_file: "data/motions/g1/g1_walk_arms_zero.pkl"
 
     reward_pose_w: 0.5
     reward_vel_w: 0.1
